<resources>
    <string name="app_name">MOL</string>
    <string name="action_settings">Settings</string>

    <!--bottom navigation-->
    <string name="bottom_menu_quest">Quest</string>
    <string name="bottom_menu_town">Town</string>
    <string name="bottom_menu_unit">Unit</string>
    <string name="bottom_menu_store">Store</string>
    <string name="bottom_menu_inventory">Inventory</string>

    <string name="error_message_quest_not_valid">알 수 없는 의뢰입니다.</string>

    <string name="stat_name_str">힘</string>
    <string name="stat_name_dex">민첩</string>
    <string name="stat_name_int">지능</string>
    <string name="stat_name_con">체력</string>
    <string name="stat_name_wis">지혜</string>
    <string name="stat_name_cha">매력</string>
    <string name="stat_name_luck">운</string>

    <string name="title_hire_Unit">새로운 인물</string>
    <string name="message_empty_skill">스킬이 없습니다</string>


    <string name="dungeon_hint_monster_lv1_1">앞에 무언가 있습니다.</string>
    <string name="dungeon_hint_monster_lv1_2">스킬이 없습니다</string>
    <string name="dungeon_hint_monster_lv1_3">스킬이 없습니다</string>
    <string name="dungeon_hint_monster_lv1_4">스킬이 없습니다</string>
    <string name="dungeon_hint_monster_lv1_5">스킬이 없습니다</string>
    <string name="dungeon_hint_monster_lv1_6">스킬이 없습니다</string>

</resources>
