<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/questFragment">

    <fragment
        android:id="@+id/questFragment"
        android:name="com.zs.mol.view.quest.fragment.QuestFragment"
        android:label="@string/bottom_menu_quest"
        tools:layout="@layout/fragment_quest">

        <action
            android:id="@+id/action_questFragment_to_newQuestFragment"
            app:destination="@id/newQuestFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:popEnterAnim="@anim/fragment_fade_enter">

            <argument
                android:name="questId"
                app:argType="string" />
        </action>

        <action
            android:id="@+id/action_questFragment_to_hireQuestFragment"
            app:destination="@id/unitHireFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:popEnterAnim="@anim/fragment_fade_enter">

            <argument
                android:name="questId"
                app:argType="string" />
        </action>
    </fragment>

    <dialog
        android:id="@+id/newQuestFragment"
        android:name="com.zs.mol.view.quest.fragment.NewQuestFragment"
        tools:layout="@layout/fragment_new_quest" />

    <dialog
        android:id="@+id/unitHireFragment"
        android:name="com.zs.mol.view.quest.fragment.UnitHireFragment"
        tools:layout="@layout/fragment_hire">

        <action
            android:id="@+id/action_hireQuestFragment_to_unitDetailFragment"
            app:destination="@id/unitDetailFragment">

            <argument
                android:name="unitId"
                app:argType="string" />
        </action>
    </dialog>

    <fragment
        android:id="@+id/unitManageFragment"
        android:name="com.zs.mol.view.unit.fragment.UnitManageFragment"
        android:label="@string/bottom_menu_unit"
        tools:layout="@layout/fragment_unit_manage">

        <action
            android:id="@+id/action_unitManageFragment_to_unitDetailFragment"
            app:destination="@id/unitDetailFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:popEnterAnim="@anim/fragment_fade_enter">

            <argument
                android:name="unitId"
                app:argType="string" />

        </action>

        <action
            android:id="@+id/action_unitManageFragment_to_fieldFragment"
            app:destination="@id/fieldFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:popEnterAnim="@anim/fragment_fade_enter">

            <argument
                android:name="unitId"
                app:argType="string" />

        </action>
    </fragment>


    <fragment
        android:id="@+id/townFragment"
        android:name="com.zs.mol.view.town.fragment.TownFragment"
        android:label="@string/bottom_menu_town"
        tools:layout="@layout/fragment_town" >

        <action
            android:id="@+id/action_town_to_dungeon"
            app:destination="@id/dungeonFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:popEnterAnim="@anim/fragment_fade_enter">

            <argument
                android:name="dungeonId"
                app:argType="string" />

        </action>

    </fragment>

    <fragment
        android:id="@+id/inventoryFragment"
        android:name="com.zs.mol.view.inventory.fragment.InventoryFragment"
        android:label="@string/bottom_menu_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/storeFragment"
        android:name="com.zs.mol.view.store.fragment.StoreFragment"
        android:label="@string/bottom_menu_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/unitDetailFragment"
        android:name="com.zs.mol.view.unit.fragment.UnitDetailFragment"
        tools:layout="@layout/fragment_unit_detail" />

    <fragment
        android:id="@+id/fieldFragment"
        android:name="com.zs.mol.view.field.FieldFragment"
        tools:layout="@layout/fragment_field" />

    <fragment
        android:id="@+id/dungeonFragment"
        android:name="com.zs.mol.view.dungeon.DungeonFragment"
        tools:layout="@layout/fragment_dungeon" />

</navigation>